feat: add applications endpoint
